[package]
name = "tidy"
version = "0.1.0"
authors = ["nilz3ro <austin.j.buddington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
clap = "2.33.3"
anyhow = "1.0.40"